# home-stuff

./: .gitignore  .gitmodules
auto-pc-screen-brightness/: README.md  code.py
m5stickc-ble-remote/: README.md
m5stickc-ble-remote/m5stick-ble-remote/: m5stick-ble-remote.ino
picow-garage-status/: CMakeLists.txt  dormant_test.c  main.c
